force-app/main/default/objects/Quote_Integration_Staging_Log__c/Quote_Integration_Staging_Log__c.object-meta.xml
<CustomObject>
    <label>Quote Integration Staging Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Quote Integration Staging Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Integration Staging Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>