force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/CPQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Integration Staging Logs</relationshipLabel>
    <relationshipName>Quote_Integration_Staging_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>