force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <label>Integration Error</label>
    <length>250</length>
    <type>Text</type>
</CustomField>