force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
                <isActive>false</isActive>
                <label>NONE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>