force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/Quote_Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Quote_Integration_Message__c</fullName>
    <formula>CPQ_Quote__r.PMC_CPQ_IntegrationMessage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Integration Message</label>
    <type>Text</type>
</CustomField>