force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/Quote_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Integration_Status__c</fullName>
    <formula>TEXT(CPQ_Quote__r.PMC_CPQ_IntegrationStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Integration Status</label>
    <type>Text</type>
</CustomField>