force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/Signature_Received__c.field-meta.xml
<CustomField>
    <fullName>Signature_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign Signature Received</label>
    <type>Checkbox</type>
</CustomField>