force-app/main/default/objects/Quote_Integration_Staging_Log__c/fields/Submit_for_Contract_Creation__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Contract_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmit for Contract Creation</label>
    <type>Checkbox</type>
</CustomField>