force-app/main/default/objects/Quote_Integration_Staging_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Quote__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Quote_Integration_Status__c</columns>
    <columns>Quote_Integration_Message__c</columns>
    <columns>Integration_Error__c</columns>
    <columns>Signature_Received__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>