force-app/main/default/objects/Quote_Integration_Staging_Log__c/listViews/Business_Users.listView-meta.xml
<ListView>
    <fullName>Business_Users</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Quote__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Signature_Received__c</columns>
    <columns>Quote_Integration_Status__c</columns>
    <columns>Integration_Error__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Deepak,Mohisin Mala Syed,Sudharsan A,Kaushik Gohain,Azmir Ali Sheik Dawood,Chandisree Chavali</value>
    </filters>
    <label>Business Users</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>