force-app/main/default/objects/Quote_Integration_Staging_Log__c/listViews/List_View.listView-meta.xml
<ListView>
    <fullName>List_View</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Quote__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Quote_Integration_Status__c</columns>
    <columns>Quote_Integration_Message__c</columns>
    <columns>Integration_Error__c</columns>
    <columns>Signature_Received__c</columns>
    <filterScope>Mine</filterScope>
    <label>List  View</label>
</ListView>