force-app/main/default/objects/Quote_Integration_Staging_Log__c/listViews/My_List.listView-meta.xml
<ListView>
    <fullName>My_List</fullName>
    <columns>NAME</columns>
    <columns>CPQ_Quote__c</columns>
    <columns>Integration_Status__c</columns>
    <columns>Quote_Integration_Status__c</columns>
    <columns>Quote_Integration_Message__c</columns>
    <filterScope>Mine</filterScope>
    <label>My List</label>
</ListView>